welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: not found: value l
    if (nums(l)==nums(l-2)-1 && nums(l)==nums(l-1)+5){
             ^has271:3: error: not found: value l
    if (nums(l)==nums(l-2)-1 && nums(l)==nums(l-1)+5){
                      ^has271:3: error: not found: value l
    if (nums(l)==nums(l-2)-1 && nums(l)==nums(l-1)+5){
                                     ^has271:3: error: not found: value l
    if (nums(l)==nums(l-2)-1 && nums(l)==nums(l-1)+5){
                                              ^